--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,12 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="96"
-    android:viewportHeight="96">
-  <group android:translateX="24"
-      android:translateY="24">
-    <path
-        android:pathData="m10,32c0,7.73 6.27,14 14,14s14,-6.27 14,-14l0,-8l-28,0l0,8zM32.25,8.74l4.2,-4.2l-1.65,-1.65l-4.61,4.61c-1.88,-0.93 -3.96,-1.5 -6.19,-1.5c-2.23,0 -4.31,0.57 -6.19,1.5l-4.61,-4.61l-1.65,1.65l4.2,4.2c-3.47,2.54 -5.75,6.62 -5.75,11.26l0,2l28,0l0,-2c0,-4.64 -2.28,-8.72 -5.75,-11.26zM18,18c-1.11,0 -2,-0.9 -2,-2s0.89,-2 2,-2c1.11,0 2,0.9 2,2s-0.89,2 -2,2zM30,18c-1.11,0 -2,-0.9 -2,-2s0.89,-2 2,-2c1.11,0 2,0.9 2,2s-0.89,2 -2,2z"
-        android:fillColor="#b2b2b2"/>
+    android:viewportWidth="44.49388"
+    android:viewportHeight="44.49388"
+    android:tint="#B2B2B2">
+  <group android:translateX="10.246941"
+      android:translateY="10.246941">
+      <path
+          android:fillColor="#FF000000"
+          android:pathData="M5,16c0,3.87 3.13,7 7,7s7,-3.13 7,-7v-4L5,12v4zM16.12,4.37l2.1,-2.1 -0.82,-0.83 -2.3,2.31C14.16,3.28 13.12,3 12,3s-2.16,0.28 -3.09,0.75L6.6,1.44l-0.82,0.83 2.1,2.1C6.14,5.64 5,7.68 5,10v1h14v-1c0,-2.32 -1.14,-4.36 -2.88,-5.63zM9,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1zM15,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1z"/>
   </group>
 </vector>
